2018-02-27  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/amflock-test.c (int_counter): Fix call to file_lock_write
	* common-src/amutil.c (unquote_string): Fix
	* common-src/fileheader-test.c, common-src/ipc-binary-test.c,
	  common-src/match-test.c: Fix memory leak

2018-02-26  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/local-security.c: Do not call initgroups since we are no
	  longer suid root

2018-02-23  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c: s/g_free/amfree/ for sp->try_again_message

2018-02-19  Jean-Louis Martineau <JMartineau@carbonite.com>
	* client-src/sendbackup-dump.c, client-src/sendbackup-gnutar.c,
	  client-src/sendbackup.c: Fix fd managment

2018-02-12  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Cmdfile.swg (get_nb_image_cmd_for_storage): Return the
	  result

2018-02-12  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Changer/disk.pm: Make slot dit with permission 0700

2018-02-12  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/protocol.c (protocol_sendreq): Cache the result of
	  get_platform_and_distro, calling it for each request take too much
	  time

2018-02-05  Jean-Louis Martineau <JMartineau@carbonite.com>
	* application-src/ampgsql.pl: Call _get_pg_version after
	  setting $self->{'props'}->{'psql-path'}

2018-01-31  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Vault.pm: Run the driver if run_delayed is set
	* server-src/amvault.pl: New --run-delayed argument
	* man/xml-source/amvault.8.xml: Document it
	* NEWS, ReleaseNotes: Add it

2018-01-31  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Vault.pm: Add vault command to the commands file if
	  delayed is set
	* server-src/amvault.pl: New --delayed argument
	* man/xml-source/amvault.8.xml: Document it
	* NEWS, ReleaseNotes: Add it

2018-01-31  Jean-Louis Martineau <JMartineau@carbonite.com>