@@ -40,6 +40,8 @@
 #include "conffile.h"
 
 int main(int argc, char **argv);
+static int validate_dump_option(int argc, char ** argv);
+static int validate_xfsdump_options(int argc, char ** argv);
 
 #if defined(VDUMP) || defined(XFSDUMP)
 #  undef USE_RUNDUMP
@@ -69,6 +71,7 @@ main(
     GPtrArray *array = g_ptr_array_new();
     gchar **strings;
     char  **env;
+	char *prgName;
 #endif /* ERRMSG */
 
     glib_init();
@@ -172,15 +175,35 @@ main(
 # endif
 #endif
 
-
     /*
      * Build the array
-     */
-
-    g_ptr_array_add(array, g_strdup(dump_program));
-
-    for (i = 1; argv[i]; i++)
-        g_ptr_array_add(array, quote_string(argv[i]));
+     */	 
+	g_ptr_array_add(array, g_strdup(dump_program));
+	
+	// No need to deallocate "prgName", as strrchr is not returning newly allocated memory
+	// but just returning an offset to the string.
+	prgName = g_strrstr(dump_program, "/");
+	if (prgName == NULL)
+	{
+		prgName = dump_program;
+	}
+	else
+	{
+		prgName++;
+	}
+	if (g_strcmp0(prgName, "dump") == 0) {
+		if (validate_dump_option(argc, argv) != 0) {
+			error(" ");
+		}
+	}
+	else if (g_strcmp0(prgName, "xfsdump") == 0) {
+		if (validate_xfsdump_options(argc, argv) != 0) {
+			error(" ");
+		}
+	}
+    for (i = 1; argv[i]; i++) {
+		g_ptr_array_add(array, quote_string(argv[i]));
+    }
 
     g_ptr_array_add(array, NULL);
     strings = (gchar **)g_ptr_array_free(array, FALSE);
@@ -202,4 +225,129 @@ main(
     g_fprintf(stderr, _("rundump: could not exec %s: %s\n"), dump_program, e);
     return 1;
 #endif								/* } */
+}
+
+int validate_dump_option(int argc, char ** argv)
+{
+	int c;
+	while ((c = getopt(argc, argv, "0123456789ab:cd:e:f:h:j:kmnqs:uvwyz:A:B:D:I:L:MQ:ST:W")) != -1) 
+	{
+		switch (c) {
+			case '?':
+				//option is not valid
+				printf ("error [%s invalid option: %c]\n", get_pname(), c);
+				return 1;
+			break;
+			// All this options takes another argument
+			case 'b':
+			case 'd':
+			case 'e':
+			case 'f':
+			case 'h':
+			case 'j':
+			case 's':
+			case 'z':
+			case 'A':
+			case 'B':
+			case 'D':
+			case 'I':
+			case 'L':
+			case 'Q':
+			case 'T':
+			{
+				// get optarg and check it against NULL. If it is null, then return error.
+				if (optarg == NULL) {
+					printf ("error [%s additional parameter is missing for option: %c]\n", get_pname(), c);
+					return 1;
+				}
+				break;
+			}
+			case '0':
+			case '1':
+			case '2':
+			case '3':
+			case '4':
+			case '5':
+			case '6':
+			case '7':
+			case '8':
+			case '9':
+			case 'a':
+			case 'c':
+			case 'k':
+			case 'm':
+			case 'n':
+			case 'q':
+			case 'u':
+			case 'v':
+			case 'w':
+			case 'y':
+			case 'M':
+			case 'S':
+			case 'W':
+			{
+				break;
+			}
+			default:
+				printf ("error [%s invalid option: %c]\n", get_pname(), c);
+				return 1;
+			break;
+		}
+	}
+	return 0;
+}
+int validate_xfsdump_options(int argc, char ** argv)
+{
+	int c;
+	while ((c = getopt(argc, argv, "ab:d:ef:l:mop:qs:t:v:z:AB:DFI:JL:M:RT")) != -1)
+	{
+		switch (c) {
+			case '?':
+				//option is not valid
+				printf ("error [%s invalid option: %c]\n", get_pname(), c);
+				return 1;
+			break;
+			// All this options takes another argument
+			case 'b':
+			case 'd':
+			case 'f':
+			case 'l':
+			case 'p':
+			case 's':
+			case 't':
+			case 'v':
+			case 'z':
+			case 'B':
+			case 'I':
+			case 'L':
+			case 'M':
+			{
+				// get optarg and check it against NULL. If it is null, then return error.
+				if (optarg == NULL) {
+					printf ("error [%s additional parameter is missing for option: %c]\n", get_pname(), c);
+					return 1;
+				}
+				break;
+			}
+			case 'a':
+			case 'e':
+			case 'm':
+			case 'o':
+			case 'q':
+			case 'A':
+			case 'D':
+			case 'F':
+			case 'J':
+			case 'R':
+			case 'T':
+			{
+				break;
+			}
+			default:
+				printf ("error [%s invalid option: %c]\n", get_pname(), c);
+				return 1;
+			break;
+		}
+	}
+	return 0;
 }
